--- a/src/pages/login/LoginPage.css
+++ b/src/pages/login/LoginPage.css
@@ -1,4 +1,4 @@
-.container {
+.login-container {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -18,7 +18,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.4); 
+    background-color: rgba(0, 0, 0, 0.4);
     z-index: 0;
 }
 
@@ -59,7 +59,7 @@
 }
 
 .btn {
-    background-color: #fff;
+    background-color: #fff !important;
     color: #007bff;
     padding: 15px 45px;
     font-size: 20px;
